<resources>
    <string name="app_name">华记</string>
    <string name="action_settings">Settings</string>
    <!--登录页面-->
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="more">更多</string>
    <string name="submit">提交</string>
    <string name="please_enter_proof_of_identity">请输入身份证号和手机号</string>
    <string name="please_enter_possword">请输入密码</string>

    <!--注册页面-->
    <string name="please_enter_username">请输入推荐人电话号码</string>
    <string name="please_enter_id_number">请输入身份证号</string>
    <string name="please_enter_id_name">请输入身份证姓名</string>
    <string name="please_enter_phone_number">请输入11位手机号</string>
    <string name="please_enter_verification_code">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="set_possword">请设置6-16数字或字母密码</string>
    <string name="please_enter_possword_two">请再次输入密码</string>

    <!--我的页面-->
    <string name="my_friends">我的伙伴</string>
    <string name="my_integral">我的积分</string>
    <string name="my_shopping_cart">我的购物车</string>
    <string name="my_order">我的订单</string>
    <string name="my_address">我的地址</string>
    <string name="qrcode">我的二维码</string>
    <string name="balance">余额</string>
    <string name="bank_card">我的银行卡</string>
    <string name="phone_card">我的电话卡</string>
    <string name="my_information">身份认证</string>
    <string name="binding_mobile">绑定手机</string>
    <string name="insertpassword">修改密码</string>
    <string name="login_back">退出登录</string>

    <!--我的积分-->
    <string name="to_earn_points">赚积分</string>
    <string name="credits_exchange">兑换积分</string>
    <string name="credits_log">积分记录</string>

    <!--我的购物车-->
    <string name="check_all">全选</string>
    <string name="total">合计：￥</string>
    <string name="close_an_account">结算</string>

    <!--我的地址-->
    <string name="compile">编辑</string>
    <string name="delete">删除</string>
    <string name="set_default">设为默认</string>
    <string name="choose">请选择</string>

    <!--我的银行卡-->
    <string name="add_bank_card">添加银行卡</string>
    <string name="risk">请使用支持身份证认证的银行卡</string>
    <string name="bank_account">银行卡账号</string>
    <string name="belongs_to_the_bank">所属银行</string>
    <string name="card_type">银行卡类型</string>
    <string name="card_person">持有人</string>
    <string name="reserved_phone_number">预留手机号</string>
    <string name="binding_acknowledgement">确认绑定</string>

    <!--我的订单-->
    <string name="obligation">待付款</string>
    <string name="payment">付款</string>
    <string name="to_send_the_goods">待发货</string>
    <string name="wait_for_receiving">待收货</string>
    <string name="confirm_receipt">确认收货</string>
    <string name="off_the_stocks">已完成</string>
    <string name="check_the_logistics">查看物流</string>
    <string name="additional_comments">追加评论</string>
    <string name="comments">评论</string>
    <string name="delete_order">删除订单</string>
    <string name="cancellation_of_order">取消订单</string>
    <string name="products_reviews">商品评论</string>
    <string name="reviews_edit">长度在10-500字之间 \n \n 写下购买体会或使用过程中带来的帮助等，可以为其他小伙伴提供参考</string>
    <string name="reviews_edit_two">对评价进行补充，更客观，更全面</string>

    <!--确认订单-->
    <string name="confrim_an_order">确认订单</string>
    <string name="no_receiving_address">暂无收货地址</string>
    <string name="delivery_method">配送方式</string>
    <string name="bbs">买家留言:</string>
    <string name="optional">(选填)请填写对卖家的备注</string>
    <string name="icash">含运费</string>
    <string name="submit_order">提交订单</string>
    <string name="choose_pay">选择支付方式</string>
    <string name="wx_pay">微信支付</string>
    <string name="al_pay">支付宝支付</string>
    <string name="immediate_payment">立即支付</string>

    <!--我的信息-->
    <string name="real_name">真实姓名:</string>
    <string name="phonenumber">手机号:</string>
    <string name="national_identification_number">身份证号码:</string>

    <!--编辑收货地址-->
    <string name="compile_address">编辑收货地址</string>
    <string name="consignee">收货人:</string>
    <string name="phone_number">手机号码:</string>
    <string name="address">所在地区:</string>
    <string name="detailed_address">详细地址:</string>
    <string name="save">保存</string>

    <!--充值页面-->
    <string name="recharge">充值</string>

    <!--首页-->
    <string name="huaji_shop">华记商铺</string>

    <!--商城页面  这个名字一直改很烦啊！！！-->
    <string name="huaji_store">华记商城</string>
    <string name="home_life">商品</string>
    <string name="mother_to_child_toy">电话卡</string>
    <string name="clothes_and_bags">手机</string>
    <string name="food_drink">充值</string>
    <string name="digital_technology">资料下载</string>

    <!--商城列表-->
    <string name="store_list">商城列表</string>
    <string name="all_commodity">全部</string>

    <!--商品详情-->
    <string name="commodity_details">商品详情</string>
    <string name="repertory">库存：</string>
    <string name="size">尺码:</string>
    <string name="evaluate">评价</string>
    <string name="good_reputation">好评</string>
    <string name="all_evaluate">所有评价</string>
    <string name="add_to_shopping_cart">加入购物车</string>
    <string name="settle_accounts">结账</string>
    <string name="market_price">市场价：</string>

    <string name="service_user">服务用户</string>
    <string name="query_statistics">查询统计</string>
    <string name="income_statistics">收益统计</string>
    <string name="service_channel">服务渠道</string>

    <string name="intergral">现金积分:%1$s（1积分=1元）</string>
    <string name="tianxian_numb">提现金额：</string>

    <string name="recharge_numb"><Data><![CDATA[充值金额：<font color="#ee213a"><b>%1$s</b></font>元]]></Data></string>

    <string name="hint_title">【温馨提示】</string>
    <string name="phone_hint"><b>您暂无购买电话卡，确定去购买？</b></string>
    <string name="business_hint">尊敬的服务商:\n\t\t\t根据国家实名制要求，为加强实名风险管控，严厉打击犯罪份子盗用身份证虚假开卡进行违法诈骗等犯罪行为。1.凡在本平台下单选择号码入网时，必须填写正确的入网人的真实姓名及身份证号码。2.用户在翼开通APP自助实名时必须提交身份证原件拍照和本人活体认证，电信运营商将按照国家对实名制的相关要求对通过APP系统自主实名成功的激活用户进行二次人工审核，发现虚假违规用户直接进行拆机处理，且在本平台预存的话费不予以退费，情节严重者直接报公安机关处理！\n\t\t\t请广大服务商熟知并遵守！\n\n\t\t\t\t\t\t\t\t\t<b>华记黄埔（宣）</b></string>
    <string name="one">【用户电子实名渠道开户特别说明】</string>
    <string name="two">\t\t\t [1] 请仔细阅读开卡规则，严格遵守，保证后期结算数据的有效性。\n \t\t\t [2] 所选号卡为中国电信4G卡，归属地为重庆，资费类型：全国无漫游，具体参照所选套餐;请选择支持电信CDMA网络手机插卡使用。</string>
    <string name="three"><b>请到服务商网点实名拿卡</b></string>
</resources>
