<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/redDark">
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

       <EditText
           android:id="@+id/please_enter_username"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_username"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:background="@drawable/login_edit_white"
            android:padding="5dp"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/please_enter_id_number"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_id_number"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:background="@drawable/login_edit_white"
            android:padding="5dp"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/please_enter_id_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_id_name"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:background="@drawable/login_edit_white"
            android:padding="5dp"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/please_enter_phone_number"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_phone_number"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:background="@drawable/login_edit_white"
            android:padding="5dp"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <EditText
                android:id="@+id/please_enter_verification_code"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/please_enter_verification_code"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:background="@drawable/get_cold_left"
                android:padding="5dp" />
            <TextView
                android:id="@+id/get_code"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_code"
                android:textColor="@color/white"
                android:background="@drawable/get_cold_red"
                android:padding="5dp"
                android:textSize="12sp"/>
        </LinearLayout>

        <EditText
            android:id="@+id/set_possword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/set_possword"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:background="@drawable/login_edit_white"
            android:padding="5dp"
            android:maxLength="20"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/please_enter_possword_two"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_possword_two"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:background="@drawable/login_edit_white"
            android:padding="5dp"
            android:maxLength="20"
            android:inputType="textPassword"
            android:layout_marginBottom="15dp"/>


        <TextView
            android:id="@+id/submit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:gravity="center"
            android:background="@drawable/login_edit_reddark"
            android:padding="8dp"/>
    </LinearLayout>


</RelativeLayout>