<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greylight">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/redDark"
        android:padding="10dp">
        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back_left"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_bank_card"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/risk"
        android:drawableLeft="@mipmap/risk"
        android:gravity="center"
        android:drawablePadding="5dp"
        android:layout_margin="15dp"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/bank_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bank_account"
        android:textColorHint="@color/greylight"
        android:textSize="16sp"
        android:padding="15dp"
        android:background="@color/white"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/greylight" />

    <TextView
        android:id="@+id/belongs_to_the_bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/belongs_to_the_bank"
        android:textColorHint="@color/greylight"
        android:textSize="16sp"
        android:background="@color/white"
        android:padding="15dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/greylight" />

    <TextView
        android:id="@+id/card_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_type"
        android:textColorHint="@color/greylight"
        android:textSize="16sp"
        android:background="@color/white"
        android:padding="15dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/greylight" />

    <EditText
        android:id="@+id/card_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_person"
        android:textColorHint="@color/greylight"
        android:textSize="16sp"
        android:padding="15dp"
        android:background="@color/white"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/greylight" />

    <EditText
        android:id="@+id/reserved_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reserved_phone_number"
        android:textColorHint="@color/greylight"
        android:textSize="16sp"
        android:padding="15dp"
        android:background="@color/white"
        android:inputType="phone"/>
    <View
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <TextView
        android:id="@+id/binding_acknowledgement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/redDark"
        android:paddingBottom="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="10dp"
        android:text="@string/binding_acknowledgement"
        android:textColor="@color/white"
        android:layout_marginBottom="25dp"/>

</LinearLayout>