<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/login">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/redDark">
        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back_left"
            android:padding="10dp"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="找回密码"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/please_enter_phone_number"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_phone_number"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:maxLines="1"
            android:background="@drawable/login_edit_white"
            android:padding="5dp"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <EditText
                android:id="@+id/please_enter_verification_code"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/please_enter_verification_code"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:maxLines="1"
                android:background="@drawable/get_cold_left"
                android:padding="5dp" />
            <TextView
                android:id="@+id/get_code"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_code"
                android:textColor="@color/white"
                android:background="@drawable/get_cold_red"
                android:padding="5dp"
                android:textSize="12sp"/>
        </LinearLayout>

        <EditText
            android:id="@+id/set_possword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/set_possword"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:maxLines="1"
            android:background="@drawable/login_edit_white"
            android:padding="5dp"
            android:maxLength="20"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/please_enter_possword_two"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_possword_two"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:maxLines="1"
            android:background="@drawable/login_edit_white"
            android:padding="5dp"
            android:maxLength="20"
            android:inputType="textPassword"
            android:layout_marginBottom="15dp"/>


        <TextView
            android:id="@+id/submit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:gravity="center"
            android:background="@drawable/login_edit_reddark"
            android:padding="8dp"/>
    </LinearLayout>

</RelativeLayout>