<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/redDark"
        android:padding="10dp">
        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back_left"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compile_address"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/consignee"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/consignee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="请输入收货人姓名"
            android:textColorHint="@color/greylight"
            android:textSize="14sp"
            android:background="@null"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/greylight"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="请输入收货人电话"
            android:textColorHint="@color/greylight"
            android:textSize="14sp"
            android:inputType="phone"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/greylight"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="请选择地址"
            android:textColor="@color/greylight"
            android:textSize="14sp"
            android:background="@null"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/greylight"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/detailed_address"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/addaddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="请输入详细地址（街道楼牌号等）"
            android:textColorHint="@color/greylight"
            android:textSize="14sp"
            android:background="@null"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/greylight"/>
    <View
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        />
    <TextView
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/redDark"
        android:paddingBottom="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="10dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:layout_marginBottom="25dp"/>

</LinearLayout>