<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/greylight"
    android:gravity="bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_pay"
            android:padding="@dimen/dp_15"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/black"/>
        <LinearLayout
            android:id="@+id/linear_wx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp_15"
            android:background="@color/white">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/wx_pay"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/black"/>
            <CheckBox
                android:id="@+id/check_wx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:button="@drawable/checkbox_selector"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:id="@+id/linear_ali"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp_15"
            android:background="@color/white">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/al_pay"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/black"/>
            <CheckBox
                android:id="@+id/check_al"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:button="@drawable/checkbox_selector"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/immediate_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/immediate_payment"
        android:layout_gravity="center"
        android:paddingTop="@dimen/dp_5"
        android:paddingBottom="@dimen/dp_5"
        android:paddingLeft="@dimen/dp_30"
        android:paddingRight="@dimen/dp_30"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/white"
        android:background="@drawable/login_btn_red"
        android:layout_margin="@dimen/dp_10"
        />
</LinearLayout>
