<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/redDark"
        android:padding="10dp">
        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back_left"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/head_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_shopping_cart"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/greylight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/grey">
        <CheckBox
            android:id="@+id/check_all"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/check_all"
            android:textColor="@color/transparent80"
            android:button="@drawable/checkbox_selector"
            android:drawablePadding="10dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/total"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="0"
            android:textSize="14sp"
            android:paddingRight="10dp"/>
        <TextView
            android:id="@+id/settle_accounts"
            android:layout_weight="0.25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/redDark"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/close_an_account"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>


</LinearLayout>